# five-leagues

./: Cargo.toml  README.md
character_gen/: Cargo.toml
character_gen/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  random.rs
warband_gui/: Cargo.toml  Dioxus.toml
warband_gui/assets/: main.css
warband_gui/src/: character_sheet.rs  main.rs
