[package]
name = "warband_gui"
version = "0.1.0"
authors = ["Sydney Bridges <sybrid@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
utils = { path = "../utils" }
character_gen = { path = "../character_gen" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
